# wisdom_sensor_net

./: .gitignore  .gitmodules  README.md  worm.toml
camp/: man_cat.txt  man_cd.txt  man_edit.txt  man_error.txt  man_flash.txt  man_help.txt  man_ls.txt  man_man.txt  man_pwd.txt  man_send.txt  man_test.txt
drivers/cat24m01_rp2040/: CMakeLists.txt
drivers/cat24m01_rp2040/src/: cat24m01_rp2040.c  cat24m01_rp2040.h
drivers/pcf8523_rp2040/src/: date_time.h
drivers/rp2x_sim7080g/src/: sim7080g_rp2x.c
examples/cat24/: wisdom_config.cmake  wisdom_import.cmake
examples/cat24/src/: cat24_main.c
examples/cellular/: CMakeLists.txt
examples/cellular/src/: cellular_example.c  old_cell_example.c
examples/eeprom/: CMakeLists.txt
examples/eeprom/src/: eeprom_example.c
examples/eeprom_erase/: CMakeLists.txt
examples/eeprom_erase/src/: eeprom_erase.c
examples/eeprom_full_read/: CMakeLists.txt
examples/eeprom_full_read/src/: eeprom_read.c
examples/radio/radio_rx/: wisdom_config.cmake
examples/radio/radio_tx/: wisdom_config.cmake
examples/whale/: CMakeLists.txt
examples/whale/src/: whale_example.c
examples/whale_eeprom/: CMakeLists.txt
examples/whale_radio/: CMakeLists.txt
examples/whale_rtc/: CMakeLists.txt
field_tests/full-whale-test-rx/: CMakeLists.txt
field_tests/full-whale-test-tx/: CMakeLists.txt
field_tests/williston-pond-test/: CMakeLists.txt
s-35770_test/: wisdom_config.cmake
s-35770_test/src/: i2c_counter.c
templates/template/: CMakeLists.txt
tools/rtc_init/: wisdom_config.cmake  wisdom_import.cmake
(+21 files in other folders)
